--- a/adapter/revive.toml
+++ b/adapter/revive.toml
@@ -8,6 +8,7 @@ warningCode = 0
 [rule.context-as-argument]
 [rule.context-keys-type]
 [rule.dot-imports]
+exclude = [ "internal/operator/controllers/cp/suite_test.go","internal/operator/controllers/dp/suite_test.go"]
 [rule.error-return]
 [rule.error-strings]
 [rule.error-naming]
